--- a/calc.css
+++ b/calc.css
@@ -7,7 +7,12 @@ body {
     margin: 0;
     background-color: #f0f0f0;
   }
-  
+.rule {
+    text-align: end;
+    margin: 20px 0;
+    color: #fff;
+    font-size: 18px;
+    }
   .calculator {
     background-color: #333;
     padding: 20px;
