--- a/calc.css
+++ b/calc.css
@@ -1,76 +1,78 @@
 body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f0f0f0;
-  }
+  font-family: Arial, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  background-color: grey;
+  color: #fff;
+}
+
 .rule {
-    text-align: end;
-    margin: 20px 0;
-    color: #fff;
-    font-size: 18px;
-    }
+  text-align: end;
+  margin: 20px 0;
+  font-size: 18px;
+}
+
+.calculator {
+  background-color: #222A36;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.display input {
+  width: 100%;
+  height: 60px;
+  font-size: 24px;
+  text-align: right;
+  padding: 10px;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 5px;
+  background-color:#363333 ;
+  color: #fff;
+}
+
+.buttons {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 10px;
+  margin-top: 20px;
+}
+
+button {
+  width: 100%;
+  height: 50px;
+  font-size: 18px;
+  font-weight: bold;
+  background-color: #333;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button:hover {
+  background-color: #444;
+}
+
+
+
+@media (max-width: 340px) {
   .calculator {
-    background-color: #333;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    width: 90%;
   }
-  
-  .display input {
-    width: 100%;
-    height: 60px;
-    font-size: 24px;
-    text-align: right;
-    padding: 10px;
-    box-sizing: border-box;
-    border: none;
-    border-radius: 5px;
-    background-color: #eee;
-    color: #333;
-  }
-  
   .buttons {
-    display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-gap: 10px;
-    margin-top: 20px;
   }
-  
-  button {
-    width: 100%;
-    height: 50px;
-    font-size: 18px;
-    background-color: #555;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  button:hover {
-    background-color: #777;
-  }
-  
-  .operator {
-    background-color: #ff9500;
-    color: #fff;
-  }
-  
-  .operator:hover {
-    background-color: #ffa94d;
-  }
-  
-  @media (max-width: 480px) {
-    .calculator {
-      width: 90%;
-    }
-  
-    .buttons {
-      grid-template-columns: repeat(4, 1fr);
-    }
-  }
+}
+.operator {
+  background-color: #13B783 ;/* Bright blue */
+  color: #273343;
+}
+
+.operator:hover {
+  background-color: #15CB92; /* Lighter blue */
+}
